NOCC 0.9.6	??

	* Conf is now passed as argument. It is no more included in functions.
	* Fixed a wrong url for prefs after sending a message (bug #493072).
	* Configuration parameters are now in an array ($conf).
	* Speed up a bit by using ' instead of " for strings.
	* Added Croatian translation.
	* Updated Slovak translation (Peter Sochna).
	* Added 'session_start' to top of action.php, as per advice from
	  Karma Dorji.
	* Fixed some potential bugs on Win32 when sending message via
	  SMTP (class_smtp.php).
	* Added exception handling when sending mail via PHP internal
	  mail() function.
	* Gets signature/leadin string from a base64-encoded preference.
	* Added code to convert signature file to signature preference, if
	  found.
	* Added reply leadin code (Colin Stephenson).
	* Added a 'timestamp' member to the content array in aff_mail.
	* Fixed message header display bug.
	* Remove date display from INBOX.
	* Updated Portugese translation (Jose Carlos).


NOCC 0.9.5	November   25, 2001

	* Fixed handling prefs file in prefs.php.
	* Fixed calls to cachePrefValue() in prefs.php.
	* Preferences optional, by omitting to set the prefs_dir in conf.php.
	* Stopped including attachments in replies.
	* Changed all imap_open to @imap_open to suppress warnings (#477574)
	* Ensure that magic_quotes_runtime is off to prevent attachment
	  mangling.
	* Add htmlspecialchars to pre-filled fields in send.php
	* Added safestrip, which works based on php.ini magic_quotes_gpc.
	* Move previous strip slashes to before sending mail
	* Strip slashes from body on reply.
	* Prevented preferences from creating prefs/sig until user is
	  properly logged in.
	* Added error handling for prefs/sig file writing errors.
	* Fixed cut_addresses to handle addresses with quoted commas.
	* Fixed various XHTML incompliances.
	* Added optional 'base_uri' configuration parameter (#463390)
	* Added patch from Arno Bean to make checkbox labels clickable
	  in prefs.